--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -1,8 +1,18 @@
 .uk-pagination{
+  .phantrang1 &{
+    margin-left: -$width-5 !important;
+  }
   li{
+    .phantrang1 &{
+      padding-left: $width-5 !important;
+    }
     &.uk-active{
       span{
         background-color: #f5f5f5;
+        .phantrang1 &{
+          background-color: #72BB3E;
+          color: #FFFFFF;
+        }
       }
     }
     a{
@@ -17,6 +27,11 @@
       border-radius: 4px;
       background-color: #222222;
       font-family:'Roboto Medium';
+      .phantrang1 &{
+        background-color: #b4b4b4;
+        color: #FFFFFF;
+        border-radius: 1px;
+      }
     }
   }
 }
